# interflow

./: .git-blame-ignore-revs  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: CI.yml  bloat.yml  build_nix.yml  documentation.yml
crates/interflow-core/: Cargo.toml
crates/interflow-core/src/: buffer.rs  device.rs  lib.rs  platform.rs  proxies.rs  stream.rs  timing.rs  traits.rs
crates/interflow-wasapi/: Cargo.toml
crates/interflow-wasapi/src/: device.rs  lib.rs  stream.rs  util.rs
examples/: duplex.rs  eject_stream_pipewire.rs  enumerate_alsa.rs  enumerate_asio.rs  enumerate_coreaudio.rs  enumerate_pipewire.rs  enumerate_wasapi.rs  input.rs  loopback.rs  set_buffer_size.rs  sine_wave.rs  sine_wave_pipewire.rs  temp_pipewire.rs
examples/util/: enumerate.rs  meter.rs  mod.rs  sine.rs
src/: audio_buffer.rs  channel_map.rs  device.rs  driver.rs  duplex.rs  lib.rs  poly.rs  prelude.rs  sample.rs  stream.rs  timestamp.rs
src/backends/: alsa.rs  coreaudio.rs  mod.rs  wasapi.rs
src/backends/alsa/: device.rs  duplex.rs  input.rs  mod.rs  output.rs  stream.rs  triggerfd.rs
src/backends/asio/: device.rs  driver.rs  error.rs  mod.rs  prelude.rs  stream.rs
src/backends/pipewire/: device.rs  driver.rs  error.rs  filter.rs  mod.rs  stream.rs  utils.rs
src/backends/wasapi/: device.rs  driver.rs  error.rs  mod.rs  prelude.rs  stream.rs  util.rs
