[package]
name = "interflow"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[dependencies]
duplicate = "1.0.0"
ndarray = "0.15.6"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.86"
indicatif = "0.17.8"

[build-dependencies]
cfg_aliases = "0.2.1"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
alsa = "0.9.0"

[[example]]
name = "enumerate_alsa"
path = "examples/enumerate_alsa.rs"
