[package]
name = "interflow"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[dependencies]
duplicate = "1.0.0"
log = { version = "0.4.22", features = ["kv"] }
ndarray = "0.15.6"
oneshot = "0.1.8"
thiserror = "1.0.63"
rtrb = "0.3.1"

[dev-dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
indicatif = "0.17.8"

[build-dependencies]
cfg_aliases = "0.2.1"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
alsa = "0.9.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
coreaudio-rs = "0.12.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_Devices_Properties",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_Media_Multimedia",
    "Win32_UI_Shell_PropertiesSystem"
]}

[[example]]
name = "enumerate_alsa"
path = "examples/enumerate_alsa.rs"

[[example]]
name = "enumerate_coreaudio"
path = "examples/enumerate_coreaudio.rs"

[[example]]
name = "enumerate_wasapi"
path = "examples/enumerate_wasapi.rs"
