[package]
name = "interflow"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[dependencies]
bitflags = "2.9.1"
duplicate = "2.0.0"
fixed-resample = "0.9.1"
log = { version = "0.4.28", features = ["kv"] }
ndarray = "0.16.1"
oneshot = "0.1.11"
rtrb = "0.3.2"
thiserror = "2.0.16"
zerocopy = { version = "0.8.26", optional = true }

[dev-dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
indicatif = "0.18.0"

[build-dependencies]
cfg_aliases = "0.2.1"

[features]
pipewire = ["dep:pipewire", "dep:libspa", "dep:libspa-sys", "dep:zerocopy"]

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
alsa = "0.9.1"
libc = "0.2.175"
libspa = { version = "0.8.0", optional = true }
libspa-sys = { version = "0.8.0", optional = true }
nix = "0.30.1"
pipewire = { version = "0.8.0", optional = true, features = ["v0_3_45"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
coreaudio-rs = "0.13.0"
coreaudio-sys = "0.2.17"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_Devices_Properties",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_Media_Multimedia",
    "Win32_UI_Shell_PropertiesSystem"
]}

[[example]]
name = "enumerate_alsa"
path = "examples/enumerate_alsa.rs"

[[example]]
name = "enumerate_coreaudio"
path = "examples/enumerate_coreaudio.rs"

[[example]]
name = "enumerate_wasapi"
path = "examples/enumerate_wasapi.rs"

[[example]]
name = "enumerate_pipewire"
path = "examples/enumerate_pipewire.rs"
required-features = ["pipewire"]

[[example]]
name = "sine_wave_pipewire"
path = "examples/sine_wave_pipewire.rs"
required-features = ["pipewire"]
