[package]
name = "interflow-wasapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bitflags.workspace = true
duplicate.workspace = true
interflow-core.workspace = true
thiserror.workspace = true
windows = { version = "0.62.2", features = [
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_Devices_Properties",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_Media_Multimedia",
    "Win32_UI_Shell_PropertiesSystem",
] }
zerocopy = { version = "0.8.39", features = ["std"] }
